[project]
name = "lbc"
version = "1.1.2"
description = "Unofficial client for Leboncoin API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

authors = [
  {name = "Etienne HODE", email = "hode.etienne@gmail.com"}
]
maintainers = [
  {name = "Etienne HODE", email = "hode.etienne@gmail.com"}
]

dependencies = [
  "curl_cffi==0.11.3"
]

keywords = ["lbc", "leboncoin", "wrapper", "api"]

[project.urls]
Homepage = "https://github.com/etienne-hd/lbc"
Repository = "https://github.com/etienne-hd/lbc"
Changelog = "https://github.com/etienne-hd/lbc/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "RUF"]
ignore = ["UP007", "UP035"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
